# ssz-patched-crates

./: Cargo.toml
ethereum-consensus-patched/ethereum-consensus/: Cargo.toml
ethereum-consensus-patched/ethereum-consensus/src/deneb/: polynomial_commitments.rs
ethereum-consensus-types-patched/ethereum-consensus-types/: Cargo.toml
ethereum-consensus-types-patched/ethereum-consensus-types/tests/: ssz_deserialization.rs
