[workspace]
members = [
    "ssz-rs-patched/ssz-rs",
    "ssz-rs-patched/ssz-rs-derive",
    "ssz-rs-patched/ssz-rs-test-gen",
    "ethereum-consensus-types-patched/test-utils",
    "ethereum-consensus-types-patched/ethereum-consensus-types",
    "ethereum-consensus-patched/beacon-api-client",
    "ethereum-consensus-patched/ethereum-consensus",
    "ethereum-consensus-patched/spec-gen",
    "ethereum-consensus-patched/test-gen",
]

[workspace.dependencies]
ssz_rs = { path = "ssz-rs-patched/ssz-rs" }
serde = "1.0.158"
serde_with = "3.3.0"
rstest = "0.18.2"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "f3bff52e9c43866f231ec40c8ab0e34125a8957f" }
blst = { version = "0.3.11", default-features = false, features = [
    "portable",
    "no-threads",
] }
sha2 = { version = "0.10.8", default-features = false }
hex = { version = "0.4.3" }
