[package]
name = "ethereum-consensus-types"
authors = ["ChainSafe Systems"]
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "dep:hex", "ssz_rs/serde"]

[dependencies]
ssz_rs = { workspace = true }
# cryptography = { workspace = true }
hex-literal = "0.4.1"
serde = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
blst = { version = "0.3.11", default-features = false, features = [
    "portable",
    "no-threads",
] }

[dev-dependencies]
serde = { workspace = true }
serde_with = "3.3.0"
rstest = "0.18.2"
ethereum-consensus = { workspace = true }
test-utils = { path = "../test-utils" }
